# hud

./: .gitignore  stack.yaml
hud-bridge/: hud-bridge.cabal
hud-bridge/app/: Main.hs
hud-bridge/app/Bridge/: Instructions.hs  Types.hs
hud-bridge/app/Bridge/Types/: TH.hs
hud-core/: hud-core.cabal
hud-core/src/HUD/: Bridge.hs  Constants.hs  Context.hs  Data.hs  IPCProvider.hs  Names.hs  Operational.hs  QueueEndpoint.hs
hud-core/src/HUD/Data/: Common.hs  HUD.hs  Identity.hs  Logging.hs  OAuth.hs
hud-core/src/HUD/Data/HUD/: Github.hs  Heroku.hs  Trello.hs
hud-core/src/HUD/Data/HUD/Github/: Common.hs  Repo.hs  User.hs
hud-core/src/HUD/Data/HUD/Github/Repo/: Comment.hs  Commit.hs  PR.hs
hud-core/src/HUD/Data/HUD/Heroku/: Organisation.hs
hud-core/src/HUD/Data/HUD/Trello/: Board.hs  Common.hs  Member.hs
hud-core/src/HUD/Operational/: AMQP.hs  Email.hs  HTTP.hs  Mongo.hs  Redis.hs  SQL.hs
hud-dashboard/: Procfile  hud-dashboard.cabal
hud-dashboard/app/: Main.hs
hud-dashboard/src/HUD/Dashboard/: API.hs  Data.hs  Persistence.hs  Server.hs
hud-dashboard/src/HUD/Dashboard/Data/: Persist.hs  Relational.hs
hud-dashboard/src/HUD/Dashboard/Server/: Auth.hs  HUD.hs  OAuth.hs
hud-email/: Procfile  hud-email.cabal
hud-email/app/: Main.hs
hud-email/src/HUD/Email/: Data.hs  Send.hs
hud-frontend/: bower.json  scripts.ps1
hud-frontend/src/: Main.js  Main.purs
hud-frontend/src/Data/Time/Clock/Internal/: UTCTime.purs
hud-frontend/src/GHC/: Int.purs
hud-frontend/src/HUD/Dashboard/: Data.purs
hud-frontend/src/HUD/Dashboard/Data/: Relational.purs
hud-frontend/src/HUD/Data/: Common.purs  HUD.purs  Identity.purs  OAuth.purs
hud-frontend/src/HUD/Data/HUD/: Github.purs  Heroku.purs  Trello.purs
hud-frontend/src/HUD/Data/HUD/Github/: Common.purs  User.purs
hud-frontend/src/HUD/Data/HUD/Github/Repo/: Comment.purs  Commit.purs  PR.purs
hud-frontend/src/HUD/Data/HUD/Heroku/: Organisation.purs
hud-frontend/src/HUD/Data/HUD/Trello/: Board.purs  Common.purs  Member.purs
hud-frontend/src/HUD/Frontend/: Operational.purs  Router.js  Router.purs  Storage.purs
hud-frontend/src/HUD/Frontend/Component/: Apps.purs  Dashboard.purs  Error.purs  HUD.purs  Home.purs  List.purs  Login.purs  Onboard.purs  SelectAccount.purs  Util.purs
hud-frontend/src/HUD/Frontend/Component/Dashboard/Menu/: Side.purs  Top.purs
hud-frontend/src/HUD/Frontend/Network/: Dashboard.purs  HTTP.purs  Identity.purs
hud-frontend/src/HUD/Frontend/Web/: Navigate.js  Navigate.purs  Route.purs
hud-frontend/static/: config.js  index.html
hud-frontend/static/css/: custom.css  editor.css
hud-github/: Procfile  hud-github.cabal
hud-github/app/: Main.hs
hud-github/src/HUD/Github/: Authoriser.hs  Server.hs  Types.hs
hud-github/src/HUD/Github/Server/: Repo.hs
hud-github/src/HUD/Github/Types/: Repo.hs  User.hs
hud-github/src/HUD/Github/Types/Repo/: Commit.hs  PR.hs
hud-heroku/: LICENSE  Procfile  hud-heroku.cabal
hud-heroku/app/: Main.hs
hud-heroku/src/HUD/Heroku/: Authoriser.hs  Server.hs  Types.hs
hud-heroku/src/HUD/Heroku/Server/: Organisation.hs  Request.hs
hud-identity/: Procfile  hud-identity.cabal
hud-identity/app/: Main.hs
hud-identity/src/HUD/Identity/: Crypto.hs  Server.hs  Signer.hs  Verifier.hs
hud-identity/src/HUD/Identity/Server/: Common.hs  Email.hs  Github.hs
hud-ipc/: hud-ipc.cabal
hud-ipc/src/HUD/IPC/: Client.hs  Server.hs  Types.hs
hud-logging/: hud-logging.cabal
hud-logging/src/HUD/: Logging.hs
hud-trello/: Procfile  hud-trello.cabal
hud-trello/app/: Main.hs
hud-trello/src/HUD/Trello/: Server.hs  Types.hs
hud-trello/src/HUD/Trello/Server/: Board.hs  Member.hs  Request.hs
scripts/: dev.ps1
