name:           hud-core
version:        0.1.0
description:    Please see the README on Github at <https://github.com/ralphmorton/hud#readme>
homepage:       https://github.com/ralphmorton/hud#readme
bug-reports:    https://github.com/ralphmorton/hud/issues
author:         Ralph Morton
maintainer:     ralphmorton@gmail.com
copyright:      2018 Ralph Morton
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/ralphmorton/hud

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , mtl
    , exceptions
    , stm
    , free
    , text
    , bytestring
    , time
    , containers
    , lens
    , aeson
    , email-validate
    , unliftio
    , uuid
    , persistent
    , persistent-postgresql
    , persistent-template
    , monad-logger
    , mongoDB
    , bson
    , amqp
    , hedis
    , http-conduit
    , http-client
    , http-types
    , resource-pool
    , http-api-data
    , path-pieces
    , parsec
    , random
    , context
  exposed-modules:
      HUD.Bridge
    , HUD.Constants
    , HUD.Data
    , HUD.Data.HUD
    , HUD.Data.HUD.Github
    , HUD.Operational
    , HUD.Context
    , HUD.Names
    , HUD.QueueEndpoint
    , HUD.IPCProvider
  other-modules:
      HUD.Data.Common
    , HUD.Data.Logging
    , HUD.Data.Identity
    , HUD.Data.HUD.Github.Common
    , HUD.Data.HUD.Github.User
    , HUD.Data.HUD.Github.Repo
    , HUD.Data.HUD.Github.Repo.Commit
    , HUD.Data.HUD.Github.Repo.Comment
    , HUD.Data.HUD.Github.Repo.PR
    , HUD.Operational.SQL
    , HUD.Operational.Mongo
    , HUD.Operational.AMQP
    , HUD.Operational.Redis
    , HUD.Operational.HTTP
    , HUD.Operational.Email
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O
