name:           hud-dashboard
version:        0.1.0
description:    Please see the README on Github at <https://github.com/ralphmorton/hud#readme>
homepage:       https://github.com/ralphmorton/hud#readme
bug-reports:    https://github.com/ralphmorton/hud/issues
author:         Ralph Morton
maintainer:     ralphmorton@gmail.com
copyright:      2018 Ralph Morton
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/ralphmorton/hud

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , hud-core
    , hud-logging
    , hud-ipc
    , mtl
    , transformers
    , exceptions
    , stm
    , text
    , bytestring
    , base16-bytestring
    , base64-bytestring
    , time
    , containers
    , aeson
    , lens
    , unliftio
    , amqp
    , hedis
    , persistent
    , persistent-postgresql
    , persistent-template
    , resource-pool
    , cryptonite
    , http-conduit
    , http-types
    , servant
    , servant-server
    , http-api-data
    , path-pieces
    , wai
    , uuid
  exposed-modules:
      HUD.Dashboard.API
    , HUD.Dashboard.Data.Relational
    , HUD.Dashboard.Data.Persist
    , HUD.Dashboard.Server
  other-modules:
      HUD.Dashboard.Data
    , HUD.Dashboard.Persistence
    , HUD.Dashboard.Server.Auth
    , HUD.Dashboard.Server.OAuth
    , HUD.Dashboard.Server.HUD
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O

executable hud-dashboard
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  build-depends:
      base >=4.7 && <5
    , hud-core
    , hud-logging
    , hud-dashboard
    , mtl
    , exceptions
    , stm
    , unliftio
    , bytestring
    , text
    , lens
    , aeson
    , containers
    , resource-pool
    , amqp
    , persistent
    , http-conduit
    , servant
    , servant-server
    , wai
    , wai-cors
    , warp
  default-language: Haskell2010
