name:           hud-email
version:        0.1.0
description:    Please see the README on Github at <https://github.com/ralphmorton/hud#readme>
homepage:       https://github.com/ralphmorton/hud#readme
bug-reports:    https://github.com/ralphmorton/hud/issues
author:         Ralph Morton
maintainer:     ralphmorton@gmail.com
copyright:      2018 Ralph Morton
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/ralphmorton/hud

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , hud-core
    , hud-logging
    , hud-ipc
    , mtl
    , transformers
    , exceptions
    , stm
    , text
    , bytestring
    , time
    , containers
    , aeson
    , lens
    , unliftio
    , amqp
    , mongoDB
    , bson
    , cryptonite
    , http-conduit
    , http-types
  exposed-modules:
      HUD.Email.Send
  other-modules:
      HUD.Email.Data
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O

executable hud-email
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  build-depends:
      base >=4.7 && <5
    , hud-core
    , hud-logging
    , hud-email
    , mtl
    , exceptions
    , stm
    , unliftio
  default-language: Haskell2010
